--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon app.js --watch routes.coffee",
     "jscoffee": "cd public && coffeebar -o js/ -mw coffee/",
     "coffeejs": "cd public && coffee -o js/ -cw coffee/",
     "smushimg": "cd public && smushit -R -- img/",
@@ -11,29 +11,32 @@
     "scaffold": "cd config && coffee scaffold.coffee"
   },
   "dependencies": {
-    "express": "4.x",
-    "jade": "*",
-    "node-sass-middleware": "*",
-    "coffee-script": "1.9.0",
-    "mongoose": "4.x",
-    "crypto": "*",
-    "yaml-config": "*",
+    "bcrypt": "*",
     "body-parser": "*",
-    "serve-favicon": "*",
-    "serve-static": "*",
-    "method-override": "*",
-    "morgan": "*",
-    "errorhandler": "*",
     "cluster": "*",
-    "cookie-parser": "*",
-    "express-session": "*",
+    "coffee-script": "1.9.0",
+    "connect-flash": "*",
     "connect-mongo": "*",
     "connect-timeout": "*",
-    "connect-flash": "*",
+    "cookie-parser": "*",
+    "crypto": "*",
+    "errorhandler": "*",
+    "express": "4.x",
     "express-device": "*",
+    "express-session": "*",
+    "jade": "*",
+    "linebyline": "^1.0.1",
+    "wikijs": "^0.1.1",
+    "mongodb": "^2.0.43",
+    "method-override": "*",
+    "mongoose": "4.x",
+    "morgan": "*",
+    "node-sass-middleware": "*",
     "passport": "*",
     "passport-local": "*",
-    "bcrypt": "*"
+    "serve-favicon": "*",
+    "serve-static": "*",
+    "yaml-config": "*"
   },
   "devDependencies": {
     "nodemon": "*",
