--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "express-session": "*",
     "jade": "*",
     "linebyline": "^1.0.1",
-    "wikijs": "^0.1.1",
-    "mongodb": "^2.0.43",
     "method-override": "*",
+    "mongodb": "^2.0.43",
     "mongoose": "4.x",
     "morgan": "*",
     "node-sass-middleware": "*",
@@ -36,6 +35,8 @@
     "passport-local": "*",
     "serve-favicon": "*",
     "serve-static": "*",
+    "underscore": "^1.8.3",
+    "wikijs": "^0.1.1",
     "yaml-config": "*"
   },
   "devDependencies": {
