--- a/web2db/wikiwalker-light/package.json
+++ b/web2db/wikiwalker-light/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "node test.js"
   },
   "dependencies": {
     "debug": "~2.2.0",
