--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "express-session": "*",
     "jade": "*",
     "linebyline": "^1.0.1",
+    "lodash": "^4.15.0",
     "method-override": "*",
     "mongodb": "^2.0.43",
     "morgan": "*",
     "node-sass-middleware": "*",
     "serve-favicon": "*",
     "serve-static": "*",
-    "underscore": "^1.8.3",
     "wikijs": "^0.1.1"
   },
   "devDependencies": {
