--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-sass-middleware": "*",
     "serve-favicon": "*",
     "serve-static": "*",
+    "slugg": "^1.0.0",
     "wikijs": "^0.1.1"
   },
   "devDependencies": {
