--- a/scripts/wikiwalker-light/package.json
+++ b/scripts/wikiwalker-light/package.json
@@ -12,6 +12,7 @@
     "mongodb": "^2.0.43",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
+    "slugg": "^1.0.0",
     "wikijs": "^0.1.1"
   }
 }
