--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bcrypt": "*",
     "body-parser": "*",
     "cluster": "*",
-    "coffee-script": "1.9.0",
+    "coffee-script": "^1.9.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "*",
     "crypto": "*",
