--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bcrypt": "*",
     "body-parser": "*",
     "cluster": "*",
-    "coffee-script": "^1.9.0",
+    "coffee-script": "^1.12.7",
     "connect-flash": "^0.1.1",
     "cookie-parser": "*",
     "crypto": "*",
@@ -19,16 +19,14 @@
     "express-device": "*",
     "express-session": "*",
     "jade": "*",
-    "linebyline": "^1.0.1",
-    "lodash": "^4.15.0",
+    "linebyline": "^1.3.0",
+    "lodash": "^4.17.11",
     "method-override": "*",
-    "mongodb": "^2.0.43",
-    "morgan": "*",
+    "mongodb": "^3.2.3",
     "node-sass-middleware": "*",
     "serve-favicon": "*",
     "serve-static": "*",
-    "slugg": "^1.0.0",
-    "wikijs": "^0.1.1"
+    "slugg": "^1.2.1"
   },
   "devDependencies": {
     "nodemon": "*",
